b=16652, r=troy@netscape.com Patch from Johnny Stenback that breaks a weak link reference